--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+## Environment normalisation:
+/.bundle
+/vendor/bundle
+
+config/database.yml
